--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           </a>
         </div>
         <nav class="menu">
+          <div class="menu__btn">
+            <span></span>
+          </div>
           <ul class="menu__list">
           <li><a href="#">Home</a></li>
           <li><a href="#">Work</a></li>
@@ -96,8 +99,135 @@
       </div>
     </div>
   </header>
-  
-
+  <section class="specialised">
+    <div class="container">
+      <div class="specialised__title title">
+        We are specialised in
+      </div>
+      <div class="specialised__items">
+        <div class="specialised__item">
+          <div class="specialised__item-img">
+            <img class="" src="images/Icon-1.svg" alt="">
+          </div>
+          <div class="specialised__item-title">UI/UX Design</div>
+          <div class="specialised__item-text">In hac habitasse platea dictumstmus adipiscing fermentum quam volutpat aliquam. Integer cilisis tristique.</div>
+        </div>
+        <div class="specialised__item">
+          <div class="specialised__item-img">
+            <img class="" src="images/Icon-2.svg" alt="">
+          </div>
+          <div class="specialised__item-title">Web Development</div>
+          <div class="specialised__item-text">In hac habitasse platea dictumstmus adipiscing fermentum quam volutpat aliquam. Integer cilisis tristique.</div>
+        </div>
+        <div class="specialised__item">
+          <div class="specialised__item-img">
+            <img class="" src="images/Icon-3.svg" alt="">
+          </div>
+          <div class="specialised__item-title">App Development</div>
+          <div class="specialised__item-text">In hac habitasse platea dictumstmus adipiscing fermentum quam volutpat aliquam. Integer cilisis tristique.</div>
+        </div>
+      </div>
+    </div>
+  </section> 
+  <section class="advantages">
+    <div class="container">
+      <div class="advantages-box">
+        <div class="advantages-box__info advantages-box__info_first">
+          <div class="advantages-box__title">Experienced Designers &
+            Developers</div>
+          <div class="advantages-box__text">
+            <p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
+            <p>Vestibulum sed metus in lorem tristique ullamcorper id vitae erat.</p>
+          </div>
+        </div>
+        <div class="advantages-box__images">
+          <img src="images/advantages-1.png" alt="">
+        </div>
+      </div>
+      <div class="advantages-box advantages-box_right">
+        <div class="advantages-box__info advantages-box__info_second">
+          <div class="advantages-box__title">Information Architect &
+            Visual Prototyping</div>
+          <div class="advantages-box__text">
+            <p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
+            <p>Vestibulum sed metus in lorem tristique ullamcorper id vitae erat. Nulla mollis sapien sollicitudin lacinia lacinia. Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa</p>
+          </div>
+        </div>
+        <div class="advantages-box__images">
+          <img src="images/advantages-2.png" alt="">
+        </div>
+      </div>
+      <div class="advantages-box">
+        <div class="advantages-box__info advantages-box__info_third">
+          <div class="advantages-box__title">Idea Generation &
+            Foundation</div>
+          <div class="advantages-box__text">
+            <p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa. Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa</p>
+          </div>
+        </div>
+        <div class="advantages-box__images">
+          <img src="images/advantages-3.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="reviews">
+    <div class="container">
+      <div class="title title-reviews">Don’t Just Take Our Words</div>
+      <div class="reviews-items">
+        <div class="reviews__item">
+          <div class="reviews__item-head">
+            <img src="images/person1.jpg" alt="">
+            <div class="reviews__item-info">
+              <div class="reviews__item-name">Arakat Bank</div>
+              <div class="reviews__item-position">International Bank Ltd.</div>
+            </div>
+          </div>
+          <div class="reviews__item-text">
+            Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcorper metus. Sed sollicitudin ipsum.
+          </div>
+        </div>
+        <div class="reviews__item">
+          <div class="reviews__item-head">
+            <img src="images/person2.jpg" alt="">
+            <div class="reviews__item-info">
+              <div class="reviews__item-name">Chrsitopher Company Ltd.</div>
+              <div class="reviews__item-position">Design & Development</div>
+            </div>
+          </div>
+          <div class="reviews__item-text">
+            Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcorper metus. Sed sollicitudin ipsum.
+          </div>
+        </div>
+        <div class="reviews__item">
+          <div class="reviews__item-head">
+            <img src="images/person3.jpg" alt="">
+            <div class="reviews__item-info">
+              <div class="reviews__item-name">Jigsawlab Studio Inc.</div>
+              <div class="reviews__item-position">Interactive</div>
+            </div>
+          </div>
+          <div class="reviews__item-text">
+            Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcorper metus. Sed sollicitudin ipsum.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__link">
+          <a href="#">About Martaup </a>
+          <a href="#">Help </a>
+          <a href="#">Privacy Policy</a>
+        </div>
+        <div class="footer__copy">
+          © 2013-2018 All rights reserved.
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
